[gd_scene load_steps=8 format=2]

[ext_resource path="res://Battle/Cards/BaseCard/CardBase.gd" type="Script" id=1]
[ext_resource path="res://Battle/ArtAssets/CardBorder.png" type="Texture" id=2]
[ext_resource path="res://Battle/ArtAssets/SharyqTwirlNado.png" type="Texture" id=3]
[ext_resource path="res://PixelRPG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Battle/ArtAssets/CardBack.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[node name="CardBase" type="MarginContainer"]
margin_left = 100.0
margin_top = 525.0
margin_right = 220.0
margin_bottom = 717.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 120.0
margin_bottom = 192.0
color = Color( 0.0588235, 0.192157, 0.282353, 1 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( 10, 10 )
scale = Vector2( 3.125, 3.09091 )
texture = ExtResource( 3 )
centered = false

[node name="Border" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
centered = false
flip_h = true

[node name="Cost" type="Label" parent="Border"]
margin_left = 37.2
margin_top = 1.2
margin_right = 47.2
margin_bottom = 13.2
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 2 )
text = "3"

[node name="Name" type="Label" parent="Border"]
margin_left = 3.0
margin_top = 38.6667
margin_right = 71.0
margin_bottom = 50.6667
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 2 )
text = "Twirlnado"

[node name="Info" type="Label" parent="Border"]
margin_left = 3.0
margin_top = 43.6667
margin_right = 115.0
margin_bottom = 106.667
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 2 )
text = "Does 4  CP
Negates 5 CP"
autowrap = true

[node name="CardBack" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_mouse_exited"]
